tests/ui/consts/invalid-union.64bit.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/invalid-union.rs:41:1
   |
LL | fn main() {
   | ^^^^^^^^^ constructing invalid value at .<deref>.y.<enum-variant(B)>.0: encountered `UnsafeCell` in a `const`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 8, align: 8) {
               ╾ALLOC0╼                         │ ╾──────╼
           }

note: erroneous constant encountered
  --> $DIR/invalid-union.rs:43:25
   |
LL |     let _: &'static _ = &C;
   |                         ^^

note: erroneous constant encountered
  --> $DIR/invalid-union.rs:43:25
   |
LL |     let _: &'static _ = &C;
   |                         ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
